diskann-quantization/tests/compile-fail/multi/mat_get_row_mut.stderr
error[E0502]: cannot borrow `mat` as immutable because it is also borrowed as mutable
  --> tests/compile-fail/multi/mat_get_row_mut.rs:14:13
   |
12 |     let row = mat.get_row_mut(0).unwrap();
   |               --- mutable borrow occurs here
13 |     // This should fail: we cannot use `mat` while `row` is still borrowed
14 |     let _ = mat.num_vectors();
   |             ^^^ immutable borrow occurs here
15 |     row[0] = 1.0;
   |     ------ mutable borrow later used here
